# shades

./: .gitignore  LICENSE.md  README.md
Shades.hsproj/: Actions.hs  Constants.hs  Convenience.hs  GameState.hs  Shades.cabal  Shades.hs  _Actions.hsplay  _Shades.hsplay
ShadesApp/ShadesApp/: AppDelegate.swift  BuildHaskell.sh  CopyHaskellDylibs.sh  GameScene.swift  Info.plist  ShadesApp-Bridging-Header.h  ViewController.swift
ShadesApp/ShadesApp.xcodeproj/: project.pbxproj
ShadesApp/ShadesApp.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
ShadesApp/ShadesApp/Base.lproj/: Main.storyboard
