name: Shades
version: 1.0
cabal-version: 1.11
build-type: Simple
license: BSD2
stability: experimental
synopsis: SpriteKit sample game
category: Games
author: Gabriele Keller
data-files:
    blue3.png
    blue5.png
    blue2.png
    blue4.png
    blue1.png
x-ghc-framework-version: 8.0.2-8.9-3
x-last-ide-version: HfM1.5.1
Executable Shades
  main-is: Shades.hs
  buildable: True
  build-depends:
      base -any,
      containers -any,
      spritekit -any,
      random -any
  other-modules:
      GameState
      Random
      Constants
      Actions
      Convenience
